# minimax-tools-setup

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: minimax-tools-setup.mdc
configs/: .env.example  pgvector.conf.example
docs/: BACKUP.md  DB_README.md  DISASTER_RECOVERY.md  MCP_SETUP.md  RUNBOOK.md
scripts/: db_ping_readonly.ps1  env_audit.ps1  frequent_commit.ps1  pg_dump_backup.ps1
src/aat/: __init__.py  cli.py  settings.py
src/aat/memory/: __init__.py  pgvector_store.py
