[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimax-tools-setup"
version = "0.1.0"
description = "System tools and tuning for the MiniMax agent stack on Windows. Hardened mirror of pgvector runtime + ops scripts + docs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg2-binary>=2.9.9",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
aat-doctor = "aat.cli:doctor"
aat-ping = "aat.cli:ping"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aat*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
